
                CHANGES in `mboost' VERSION 2.1-0 (2010-0x-xx)

  o  bolscw can be mixed with other base-learners (although
     not yet exported and not via the formula interface)

  o  speed up glmboost() a little bit

  o  added base-learners for radial basis functions (brad())
     and smooth monotonic (or convex/concave) functions (bmono())

  o  added base-learners for Markov random fields (bmrf())

  o  bols(x, intercept = FALSE) only reasonable if x is centered

  o  bbs(x, cyclic = TRUE) for cyclic covariates ensures that
     predictions at the boundaries coincide and that the resulting
     function estimate is smoothly joined

  o  added extract() methods for base-learners and fitted models

  o  added residuals() function to extract residuals from the
     model

  o  added new families:
       - AUC() for AUC loss function
       - GammaReg() for gamma regression models

  o  changed behavior of cvrisk() if weights are used:
     out-of-bag-risk now weighted according to "weights" as
     specified in call to mboost

  o  improved predict.mboost(): added names where missing and the
     offset as attribute where applicable.

  o  changed default in glmboost() to center = TRUE

  o  fixed bug in predict() with glmboost.matrix(..., center = TRUE)

  o  coef now also works with tree base-learners
     (returns NULL in this case)

  o  changed coef.gamboost to coef.mboost

  o  changed default for degrees of freedom in bspatial()
     to df = 6

  o  added checks in bbs (and brandom) to ensure that the specified
     degrees of freedom are greater than the range of the (unpenalized)
     null space

  o  various improvements in plot.mboost function

  o  added warning if df2lambda is likely to become numerically
     instable (i.e. in the case of large entries in the design matrix)


                CHANGES in `mboost' VERSION 2.0-6 (2010-05-22, r510)

  o  no not use multicore functionality in R CMD check, really.

